Revert "Remove obsolete entry"
This reverts commit c2f8cc131befeb9b66d19bd07a4df51aabee2c7a.

--- a/webextensions/_locales/de/messages.json
+++ b/webextensions/_locales/de/messages.json
@@ -360,6 +360,8 @@
   "tabContextMenu_reopenInContainer_noContainer_label": { "message": "Kei&ne Tab-Umgebung" },
   "tabContextMenu_tearOff_label":     { "message": "I&n neues Fenster verschieben" },
 
+  "tabContextMenu_reloadAll_label":   { "message": "Alle &Tabs neu laden" },
+  "tabContextMenu_bookmarkAll_label": { "message": "&Lesezeichen für alle Tabs hinzufügen…" },
   "tabContextMenu_closeAfter_label":  { "message": "&Rechte Tabs schließen" },
   "tabContextMenu_closeOther_label":  { "message": "&Andere Tabs schließen" },
 
