--- a/webextensions/_locales/ja/messages.json
+++ b/webextensions/_locales/ja/messages.json
@@ -424,6 +424,8 @@
   "tabContextMenu_moveTabToEnd_label":   { "message": "末尾へ移動(&E)" },
   "tabContextMenu_tearOff_label":     { "message": "新しいウィンドウへ移動(&W)" },
 
+  "tabContextMenu_reloadAll_label":   { "message": "すべてのタブを再読み込み(&A)" },
+  "tabContextMenu_bookmarkAll_label": { "message": "すべてのタブをブックマーク(&T)..." },
 
   "tabContextMenu_closeTabOptions_label": { "message": "タブをまとめて閉じる(&O)" },
   "tabContextMenu_closeAfter_label":  { "message": "右のタブをすべて閉じる(&I)" },
