--- a/webextensions/_locales/zh_TW/messages.json
+++ b/webextensions/_locales/zh_TW/messages.json
@@ -327,6 +327,8 @@
   "tabContextMenu_duplicate_label":   { "message": "複制分頁(&D)" },
   "tabContextMenu_tearOff_label":     { "message": "移動到新視窗(&W)" },
 
+  "tabContextMenu_reloadAll_label":   { "message": "重新載入所有分頁(&A)" },
+  "tabContextMenu_bookmarkAll_label": { "message": "將所有分頁加入書籤(&T)…" },
   "tabContextMenu_closeAfter_label":  { "message": "關閉右方分頁(&I)" },
   "tabContextMenu_closeOther_label":  { "message": "關閉其他分頁(&O)" },
 
