Define "bookmark selected tabs" for the tab bar area

--- a/webextensions/_locales/en/messages.json
+++ b/webextensions/_locales/en/messages.json
@@ -449,6 +449,7 @@
   "tabContextMenu_moveTab_label_multiselected": { "message": "Mo&ve Tabs" },
 
   "tabContextMenu_bookmark_label_multiselected": { "message": "&Bookmark Tabs…" },
+  "tabContextMenu_bookmarkSelected_label":       { "message": "Bookmark Selected &Tabs…" },
 
   "tabContextMenu_close_label_multiselected":       { "message": "Close &Selected Tabs" }
 }
