--- a/webextensions/_locales/en/messages.json
+++ b/webextensions/_locales/en/messages.json
@@ -203,7 +203,8 @@
   "config_style_metal": { "message": "Metal" },
   "config_style_sidebar": { "message": "Sidebar" },
   "config_style_highcontrast": { "message": "High Contrast" },
-  "config_style_none": { "message": "No Decoration (*Please decorate everything by yourself via \"Extra style rules for sidebar contents\")" },
+  "config_style_none": { "message": "No Decoration" },
+  "config_style_none_info": { "message": " (*Please decorate everything by yourself via \"Extra style rules for sidebar contents\")" },
 
   "config_colorScheme_caption": { "message": "Color scheme:" },
   "config_colorScheme_photon": { "message": "Photon" },
@@ -215,7 +216,8 @@
   "config_faviconizePinnedTabs_label": { "message": "Show pinned tabs only with their icon" },
   "config_animation_label": { "message": "Enable animation effects" },
   "config_showCollapsedDescendantsByTooltip_label": { "message": "Show collapsed descendants in the tooltip on a tab" },
-  "config_applyThemeColorToIcon_label": { "message": "Apply theme color to the toolbar button (*You need to set \"svg.context-properties.content.enabled\" to \"true\" via \"about:config\" on Firefox 62 or later)" },
+  "config_applyThemeColorToIcon_label": { "message": "Apply theme color to the toolbar button" },
+  "config_applyThemeColorToIcon_label_info": { "message": "(*You need to set \"svg.context-properties.content.enabled\" to \"true\" via \"about:config\" on Firefox 62 or later)" },
 
 
   "config_context_caption": { "message": "Context Menu" },
