--- a/webextensions/_locales/ja/messages.json
+++ b/webextensions/_locales/ja/messages.json
@@ -410,6 +410,8 @@
 
   "config_all_caption": { "message": "すべての設定" },
 
+  "config_terms_delimiter": { "message": "" },
+
 
   "tabContextMenu_reload_label":      { "message": "タブを再読み込み(&R)" },
   "tabContextMenu_mute_label":        { "message": "タブをミュート(&M)" },
