--- a/webextensions/_locales/en/messages.json
+++ b/webextensions/_locales/en/messages.json
@@ -215,7 +215,7 @@
   "config_maxTreeLevel_after": { "message": "level(s) (*Negative value means \"infinite\")" },
 
   "config_faviconizePinnedTabs_label": { "message": "Show pinned tabs only with their icon" },
-  "config_animation_label": { "message": "Enable animation effects" },
+  "config_animation_label": { "message": "Animations" },
   "config_showCollapsedDescendantsByTooltip_label": { "message": "Show collapsed descendants in the tooltip on a tab" },
   "config_applyThemeColorToIcon_label": { "message": "Apply theme color to the toolbar button" },
   "config_applyThemeColorToIcon_label_info": { "message": "(*You need to set \"svg.context-properties.content.enabled\" to \"true\" via \"about:config\" on Firefox 62 or later)" },
