--- a/webextensions/_locales/zh_TW/messages.json
+++ b/webextensions/_locales/zh_TW/messages.json
@@ -160,7 +160,7 @@
   "config_maxTreeLevel_after": { "message": "層分頁(負值表示無限制)" },
 
   "config_faviconizePinnedTabs_label": { "message": "釘選分頁只顯示網頁圖示" },
-  "config_animation_label": { "message": "啟用動畫效果" },
+  "config_animation_label": { "message": "動畫" },
 
 
   "config_extraItems_caption": { "message": "額外右鍵選單項" },
