--- a/webextensions/_locales/en/messages.json
+++ b/webextensions/_locales/en/messages.json
@@ -23,6 +23,7 @@
   "command_tabbarDown":            { "message": "Scroll Tabs Down by Line" },
   "command_tabbarPageDown":        { "message": "Scroll Tabs Down by Page" },
   "command_tabbarEnd":             { "message": "Scroll Tabs to End" },
+  "command_groupSelectedTabs":     { "message": "Create New Group from Selected Tabs" },
 
   "tab_closebox_tab_tooltip": { "message": "Close tab" },
   "tab_closebox_tab_tooltip_multiselected": { "message": "Close tabs" },
@@ -171,6 +172,7 @@
   "context_expandTree_label": { "message": "Exp&and this Tree" },
   "context_expandAll_label": { "message": "E&xpand All" },
   "context_bookmarkTree_label": { "message": "&Bookmark this Tree…" },
+  "context_groupTabs_label":    { "message": "Create New &Group from tabs" },
   "context_topLevel_prefix": { "message": "Top level item: " },
 
   "context_collapsed_label": { "message": "Collapsed (for testing of a checkbox type menu)" },
