--- a/webextensions/_locales/en/messages.json
+++ b/webextensions/_locales/en/messages.json
@@ -412,7 +412,7 @@
   "config_sidebarScrollbarPosition_left": { "message": "Left side" },
   "config_sidebarScrollbarPosition_right": { "message": "Right side" },
 
-  "config_requestPermissions_bookmarks": { "message": "Allow to create bookmarks" },
+  "config_requestPermissions_bookmarks": { "message": "Allow to read and create bookmarks" },
   "config_requestPermissions_allUrls":   { "message": "Don't expand collapsed tree and skip collapsed descendants, while switching focus of tabs via keyboard shortcuts. (*You need to allow executing scripts on webpages.)" },
 
   "config_requestPermissions_fallbackToToolbarButton_title": { "message": "Click the \"Tree Style Tab\" toolbar button" },
