--- a/webextensions/_locales/ja/messages.json
+++ b/webextensions/_locales/ja/messages.json
@@ -408,7 +408,7 @@
   "config_sidebarScrollbarPosition_left": { "message": "左側" },
   "config_sidebarScrollbarPosition_right": { "message": "右側" },
 
-  "config_requestPermissions_bookmarks": { "message": "ブックマークの作成を許可する" },
+  "config_requestPermissions_bookmarks": { "message": "ブックマークの読み取りと作成を許可する" },
   "config_requestPermissions_allUrls":   { "message": "キーボードショートカットでのタブ切り替え中は、折り畳まれた子孫タブにはフォーカスせず、折り畳まれたツリーも展開しない（※Webページ内でのスクリプトの実行を許可する必要があります）" },
 
   "config_requestPermissions_fallbackToToolbarButton_title": { "message": "ツールバーの「ツリー型タブ」ボタンをクリックして下さい" },
