--- a/webextensions/_locales/ru/messages.json
+++ b/webextensions/_locales/ru/messages.json
@@ -83,7 +83,7 @@
     }},
 
   "bookmarkTabs_notification_success_title": { "message": "Вкладки успешно добавлены в закладки" },
-  "bookmarkTabs_notification_success_message": { "message": "$COUNT$ вкладок, включая \"$TITLE$\" добавлено в закладки, в новую папку под \"$PARENT$.",
+  "bookmarkTabs_notification_success_message": { "message": "$COUNT$ вкладок, включая \"$TITLE$\" добавлено в закладки, в новую папку под \"$PARENT$\".",
     "placeholders": {
       "title": { "content": "$1", "example": "Title" }
     }},
