--- a/webextensions/_locales/ja/messages.json
+++ b/webextensions/_locales/ja/messages.json
@@ -399,6 +399,7 @@
   "config_logFor_common":     { "message": "共通モジュールからのログ" },
   "config_logFor_background": { "message": "バックグラウンドモジュールからのログ" },
   "config_logFor_sidebar":    { "message": "サイドバーモジュールからのログ" },
+  "config_loggingQueries_label": { "message": "タブの検索処理のパフォーマンスログを収集する" },
   "config_simulateSVGContextFill_label": { "message": "Bug 1388193およびBug 1421329を回避して擬似的にSVGアイコンを表示する（※CPU負荷が高まる可能性があります。このオプションを無効にする場合、これらのBugが修正されるまでは\"about:config\"で\"svg.context-properties.content.enabled\"を有効化する必要があります。）" },
   "config_useCachedTree_label": { "message": "キャッシュを使ってツリーの初期化を高速化する" },
   "config_useCachedTree_description": { "message": "※キャッシュの不整合で動作が不安定になっている場合、このチェックをOFFにして再度ONにすることでキャッシュが刷新され状況が改善するかもしれません。" },
